# churros-data-ppa

./: .gitignore  README.md  main.py  pyproject.toml  request.http  requirements.txt  setup.cfg
.github/workflows/: test_pipeline.yml
app/: ppa_repository.py  repository_interface.py
app/repository/: __init__.py  base.py  churros_repository.py  decorators.py  dynamic_query_mixin.py
examples/: main.py
tests/: test_crud.py  test_dynamic_query_mixin.py  test_save.py
