[tool.poetry]
name = "churros-data-ppa"
version = "0.1.0"
description = "makes it easy to implement repositories"
authors = ["Gustavo Valle"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.12.0"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
